<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>py_pubsub</name>
  <version>0.0.0</version>

  <description>Examples of minimal publisher/subscriber using rclpy</description>
  <maintainer email="thomas_medhat@todo.todo">thomas_medhat</maintainer>
  <license>Apache-2.0</license>
  

  <!-- add any dependencies (lib, msg_type, pkg,.....) -->
  <exec_depend>rclpy</exec_depend> <!-- py lib -->
  <exec_depend>std_msgs</exec_depend> <!-- add it because it is the type of msg used --> 



  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
